# swami-picker

./: .gitignore  PROJECT_PLAN.md  PROJECT_RULES.md  main.py  pyproject.toml
configs/: phase0_mnist.yaml  phase0_mnist_cvt.yaml  phase0_mnist_fast.yaml  phase1_fk_pipeline.yaml  phase2_fk_mae.yaml  phase2_supervised.yaml  phase2_supervised_cnn.yaml  phase2_supervised_cnn_gap128.yaml  phase2_supervised_descriptors.yaml  phase2_supervised_mlp_final.yaml  phase2_supervised_mlp_small.yaml  phase2_supervised_mlp_weighted.yaml  phase2_vicreg.yaml  phase4_picking.yaml  phase4_picking_encdec_v1.yaml  phase4_picking_multimode.yaml  phase4_picking_seq.yaml  phase4_picking_seq_reg_coverage.yaml  phase4_picking_seq_regularized.yaml  phase4_picking_shifts.yaml  phase4_picking_smooth.yaml  phase4_picking_unet_cond_v1.yaml  phase4_picking_unet_v1.yaml  phase4_picking_unet_v2.yaml
experiments/: MODEL_CHANGELOG.md
reviews/: training_integration.md  visualization_correctness.md  visualization_quality.md
scripts/: analyze_embedding_similarity.py  preprocess_fk.py  regenerate_reconstruction_plots.py  train_fk_mae.py  train_mae.py  train_vicreg.py  verify_checkpoint_resume.py  verify_data_pipeline.py  verify_mae_model.py  verify_plot_style.py  visualize_augmentations.py  visualize_masking.py  visualize_patchify.py
tests/: conftest.py  test_annotation_app.py  test_annotation_io.py  test_augmentations.py  test_config.py  test_coordinate_transform.py  test_cvt_mae.py  test_export_annotations.py  test_fk_dataset.py  test_fk_split.py  test_interpolation.py  test_mae.py  test_picking_loss.py  (+10 more)
(+71 files in other folders)
