[project]
name = "swami-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "hdbscan>=0.8.43",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "segyio>=1.9.14",
    "timm>=1.0.27",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "ty>=0.0.41",
]
